--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ license = "MIT"
 python = "^3.7"
 
 [tool.poetry.dev-dependencies]
+django = "^3.1.1"
+daphne = "^2.5.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
